--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="navbar-item">
                   <a class="nav-link" href="">Contact</a>
                 </li>
-                <li class="nav-item">
+                <li class="navbar-item">
                   <a class="nav-link" href="">Pricing</a>
                 </li>
-                <li class="nav-item">
+                <li class="navbar-item">
                   <a class="nav-link" href="">Download</a>
                 </li>
               </ul>
