--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Nav Bar -->
 
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container-fluid">
+          <div class="container-xxl">
             <a class="navbar-brand" href="">tindog</a>
 
             <button
@@ -58,7 +58,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <ul class="navbar-nav ml-auto">
+              <ul class="navbar-nav ms-auto">
                 <li class="navbar-item">
                   <a class="nav-link" href="">Contact</a>
                 </li>
@@ -78,10 +78,10 @@
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg">
-              <i class="fab fa-apple"></i>Download
+              <i class="fab fa-apple"></i> Download
             </button>
             <button type="button" class="btn btn-outline-light btn-lg">
-              <i class="fab fa-google-play"></i>Download
+              <i class="fab fa-google-play"></i> Download
             </button>
           </div>
           <div class="col-lg-6">
