--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <p>Unlimited App Usage</p>
       <button type="button">Sign Up</button>
     </section>
-
+    <div></div>
     <!-- Call to Action -->
 
     <section id="cta">
