--- a/index.html
+++ b/index.html
@@ -42,50 +42,57 @@
         <!-- Nav Bar -->
 
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container-xxl">
-            <a class="navbar-brand" href="">tindog</a>
+          <!-- <div class="container-fluid"> -->
+          <a class="navbar-brand" href="">tindog</a>
 
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarTogglerDemo01"
-              aria-controls="navbarTogglerDemo01"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <ul class="navbar-nav ms-auto">
-                <li class="navbar-item">
-                  <a class="nav-link" href="">Contact</a>
-                </li>
-                <li class="navbar-item">
-                  <a class="nav-link" href="">Pricing</a>
-                </li>
-                <li class="navbar-item">
-                  <a class="nav-link" href="">Download</a>
-                </li>
-              </ul>
-            </div>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Download</a>
+              </li>
+            </ul>
           </div>
+          <!-- </div> -->
         </nav>
 
         <!-- Title -->
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg">
+            <button type="button" class="btn btn-dark btn-lg download-button">
               <i class="fab fa-apple"></i> Download
             </button>
-            <button type="button" class="btn btn-outline-light btn-lg">
+            <button
+              type="button"
+              class="btn btn-outline-light btn-lg download-button"
+            >
               <i class="fab fa-google-play"></i> Download
             </button>
           </div>
           <div class="col-lg-6">
-            <img class="iphone6" src="images/iphone6.png" alt="iphone-mockup" />
+            <img
+              class="title-image"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+            />
           </div>
         </div>
       </div>
@@ -94,7 +101,7 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
+      <h3><i class="fas fa-check-circle"></i> Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
 
       <h3>Elite Clientele</h3>
@@ -156,7 +163,7 @@
       <p>Unlimited App Usage</p>
       <button type="button">Sign Up</button>
     </section>
-    <div></div>
+
     <!-- Call to Action -->
 
     <section id="cta">
