--- a/index.html
+++ b/index.html
@@ -101,15 +101,70 @@
     <!-- Features -->
 
     <section id="features">
-      <h3><i class="fas fa-check-circle"></i> Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="feature-box col-lg-4">
+            <i class="icon fas fa-check-circle fa-4x"></i>
+            <h3>Easy to use.</h3>
+            <p>So easy to use, even your dog could do it.</p>
+          </div>
 
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
+          <div class="feature-box col-lg-4">
+            <i class="icon fas fa-bullseye fa-4x"></i>
+            <h3>Elite Clientele</h3>
+            <p>We have all the dogs, the greatest dogs.</p>
+          </div>
 
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+          <div class="feature-box col-lg-4">
+            <i class="icon fas fa-heart fa-4x"></i>
+            <h3>Guaranteed to work.</h3>
+            <p>Find the love of your dog's life or your money back.</p>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <!-- Features copy -->
+
+    <!-- <section id="features">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-4">
+            <h3>
+              <div class="col-lg-12">
+                <div>
+                  <i class="fas fa-check-circle features-i"></i>
+                </div>
+                <div>Easy to use.</div>
+              </div>
+            </h3>
+            <p class="features-p">So easy to use, even your dog could do it.</p>
+          </div>
+    
+          <div class="col-lg-4">
+            <h3>
+              <div class="col-lg-12">
+                <div><i class="fas fa-bullseye features-i"></i></div>
+                <div>Elite Clientele</div>
+              </div>
+            </h3>
+            <p class="features-p">We have all the dogs, the greatest dogs.</p>
+          </div>
+    
+          <div class="col-lg-4">
+            <h3>
+              <div class="col-lg-12">
+                <div><i class="fas fa-heart features-i"></i></div>
+                <div>Guaranteed to work.</div>
+              </div>
+            </h3>
+            <p class="features-p">
+              Find the love of your dog's life or your money back.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section> -->
 
     <!-- Testimonials -->
 
