--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       src="https://kit.fontawesome.com/1b6bbeb19e.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- JS script  -->
+
+    <script src="script.js"></script>
   </head>
 
   <body>
